added bootstrap, added noselect and removed spinner from number input

--- a/src/App.css
+++ b/src/App.css
@@ -2,8 +2,30 @@
   text-align: center;
 }
 
+/* allows menu navigation to be smoother */
 html{
   scroll-behavior: smooth;
+}
+
+/* turns off basic increase/decrease selectors for number input */
+input[type="number"]::-webkit-outer-spin-button,
+input[type="number"]::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+input[type="number"] {
+  -moz-appearance: textfield;
+}
+
+/* prevents things from being highlighted, mainly for buttons */
+.noselect {
+  -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+     -khtml-user-select: none; /* Konqueror HTML */
+       -moz-user-select: none; /* Old versions of Firefox */
+        -ms-user-select: none; /* Internet Explorer/Edge */
+            user-select: none; /* Non-prefixed version, currently
+                                  supported by Chrome, Edge, Opera and Firefox */
 }
 
 .App-logo {
