--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,14 @@
 /* allows menu navigation to be smoother */
 html{
   scroll-behavior: smooth;
-  overflow-y: overlay
+  /* Hide scrollbar for IE, Edge and Firefox */
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+html::-webkit-scrollbar {
+  display: none;
 }
 
 /* turns off basic increase/decrease selectors for number input */
