WIP, attempt to stylize home page

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .App {
   text-align: center;
-  background-color: #004d1a;
+  background-color: black;
 }
 
 /* allows menu navigation to be smoother */
